<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstName"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/tvfirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defoult_name"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/tvlastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defoult_name"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defoult_name"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>


        </LinearLayout>







    </LinearLayout>

</androidx.cardview.widget.CardView>